Bug 62174 - Italic Greek symbols (iGreek set) fails if UI Language is changed
Summary: Italic Greek symbols (iGreek set) fails if UI Language is changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Formula-Editor
  Show dependency treegraph
 
Reported: 2013-03-11 15:02 UTC by Valdas
Modified: 2023-09-21 10:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document to ilustrate Bug (12.13 KB, application/vnd.oasis.opendocument.text)
2013-03-11 15:02 UTC, Valdas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valdas 2013-03-11 15:02:27 UTC
Created attachment 76339 [details]
Sample document to ilustrate Bug

Greek symbols has names according to Language in LibO, for example in Lithuanian I write %ALFA for Greek ALPHA letter. When I open that document in Writer with different Language, then that letter automatically is converted to correct name, f.e. if Language in LibO is English then after open and enter in to formula editor that name of Greek letter becomes %ALPHA. This OK.

 But this not apply to Italic Greek Letters. F.e. if I write %ivarfi (Lithuanian language) and open that document in Writer with English language then in formula editor (formula must be updated to see effect) mentioned name stays same %ivarfi.

 Attached sample document with Greek letters created in Writer with Lithuanian Language.

 I also can reproduce this with LibO v3.6.4.3
Comment 1 Joel Madero 2013-04-22 16:39:09 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 3.6.6.2 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As you have confirmed the issue on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)

Normal - can prevent professional quality work

Low - the number of users affected by this one will be quite low, first off using insert -> formula is already quite rare (the vast majority of users use LibreOffice in a basic writing program), furthermore only an issue if you're using multiple languages. If another bugs are marked as a duplicate this will suggest others are also affected and may be a reason to up the priority.

Keywords - 

Whiteboard Status - PropopsedEasyHack

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Laurent Balland 2015-02-02 16:19:05 UTC
Confirmed with LibO 4.4.0
It seems to be like this since the old times.

There is a pb when saving document, because symbols from Greek set or special set are correctly translated to English, but symbols from iGreek set are not translated.

Same thing occurs when opening document: symbol from iGreek set should be read in English, but they are read in the language of the UI. So for instance, %BETA is correctly read, but %iBETA is not read with French UI, as it is %iBÊTA which is expected.
Comment 3 Laurent Balland 2015-02-03 14:50:43 UTC
Resolution of this bug would be quite difficult, due to compatibility problems: all actual versions of OOo/LibO/AOO are expecting names of iGreek letters in the language of the UI. So, if LibO correctly saves them with their English name, all other versions of OOo/LibO/AOO won't be able to read the iGreek letters anymore.

As UI language is not stored in ODF file LibO could only try to guess, according to the language of the text if the formula is inserted in a Writer document for instance.

A solution may be to store the language of the UI into the math object. This information could be ignored by other versions of OOo/LibO/AOO, and can be used by LibO to correctly display iGreek letters.
Comment 4 Laurent Balland 2015-02-03 20:35:10 UTC
iGreek set was introduced in OOo 3.3.0 and LibO 3.3.0

Change version accordingly
Comment 5 QA Administrators 2016-11-08 11:19:35 UTC Comment hidden (obsolete)
Comment 6 Valdas 2016-11-08 11:56:02 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2017-11-09 07:44:12 UTC Comment hidden (obsolete)
Comment 8 Valdas 2017-11-12 18:55:48 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2018-11-13 03:41:50 UTC Comment hidden (obsolete)
Comment 10 Valdas 2018-11-13 07:53:04 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2021-02-24 04:04:59 UTC Comment hidden (obsolete)
Comment 12 Valdas 2021-03-01 06:26:50 UTC Comment hidden (obsolete)
Comment 13 QA Administrators 2023-03-02 03:25:16 UTC Comment hidden (obsolete)
Comment 14 Valdas 2023-03-02 05:45:56 UTC Comment hidden (obsolete)
Comment 15 Commit Notification 2023-09-21 10:34:03 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7de4c6b95da7d187c403ee478786bb74467c1eb5

tdf#62174: Fix saving of localized iGreek symbols

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Khaled Hosny 2023-09-21 10:35:19 UTC
This is now fixed but the file needs to be re-saved from the localized version first so that the English names of the symbols gets saved in the file.